kubernetes/bank-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bank-front
  name: bank-front
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-front
  template:
    metadata:
      labels:
        app: bank-front
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/bank-front:__COMMIT_HASH__
          imagePullPolicy: Always
          name: bank-front
          ports:
            - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bank-front
  name: bank-front
  namespace: __NAMESPACE__
spec:
  ports:
    - port: 81
      protocol: TCP
      targetPort: 81
  selector:
    app: bank-front
  type: ClusterIP
