kubernetes/stock-market-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stock-market-front
  name: stock-market-front
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-market-front
  template:
    metadata:
      labels:
        app: stock-market-front
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-1/stock-market-front:__COMMIT_HASH__
          imagePullPolicy: Always
          name: stock-market-front
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-market-front
  name: stock-market-front
  namespace: __NAMESPACE__
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: stock-market-front
  type: ClusterIP
